frontend/test/should_fail/index_isin_fromto_argument2_mismatch.grg
#using "index_count_model.gm"

rule i {
	n:N;

	if{ isInNodesFromIndexFromTo(n, fooi, 42.0, "mismatching-string"); }
	
	modify {
	}
}
